# advmla_assignment_2

./: Makefile  README.md  pyproject.toml  requirements.txt
assignment_2/: __init__.py  dataset.py  features.py  plots.py
assignment_2/modeling/: predict.py  train.py
models/precipitation_fall/: features.txt  metadata.json
models/rain_or_not/: metadata.json  model.joblib
notebooks/: 36120_25SP_AT2_25739083_experiment.ipynb
