[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "assignment_2"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "ManhTuanNguyen" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["assignment_2"]
include = ["pyproject.toml", "assignment_2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["assignment_2"]
force-sort-within-sections = true

