[tool.poetry]
name = "assignment_2"
version = "0.0.1"
description = "A short description of the project."
authors = ["ManhTuanNguyen"]
readme = "README.md"
packages = [{ include = "assignment_2" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "1.26.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
xgboost = "2.0.3"
hyperopt = "0.2.7"
pyarrow = "16.1.0"
fastparquet = "2024.11.0"
requests = "2.32.3"
urllib3 = "2.2.2"
matplotlib = "3.9.2"
seaborn = "0.13.2"
jupyterlab = "4.2.3"
ipykernel = "6.29.5"
joblib = "1.4.2"
tqdm = "4.66.5"
python-dotenv = "1.0.1"
loguru = "0.7.2"
ruff = "0.6.9"
typer = "0.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
src = ["assignment_2"]
include = ["pyproject.toml", "assignment_2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["assignment_2"]
force-sort-within-sections = true
